fixed alignment

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,25 +24,15 @@ p {
 br {
 	text-indent: 3em;
 }
-@media (min-width: 800px){
-	.content {
-		margin-left: 25%;
-		margin-right: 25%;
-	}
-	.mainhead {
-		margin-left: 20%;
-		margin-right: 20%;
-	}
+.content {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1000px;
 }
-@media (max-width: 800px){
-	.content {
-		margin-left: auto;
-		margin-right: auto;
-	}
-	.mainhead {
-		margin-left: auto;
-		margin-right: auto;
-	}
+.mainhead {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1000px;
 }
 
 
